<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConnectToRepActivity" >

    <Button
        android:id="@+id/b_ctr_send_to_rep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="sendToRep"
        android:text="@string/button_send_to_rep" />

    <EditText
        android:id="@+id/et_ctr_rep_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_ctr_phone_number"
        android:layout_alignTop="@+id/b_ctr_send_to_rep"
        android:layout_toLeftOf="@+id/b_ctr_send_to_rep"
        android:ems="10"
        android:hint="@string/rep_id" />

    <TextView
        android:id="@+id/tv_ctr_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pb_ctr_working"
        android:layout_alignRight="@+id/et_ctr_phone_number"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/pb_ctr_working"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ProgressBar
        android:id="@+id/pb_ctr_working"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_ctr_rep_id"
        android:layout_alignLeft="@+id/et_ctr_rep_id"
        android:layout_marginBottom="42dp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/et_ctr_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_ctr_address"
        android:layout_alignLeft="@+id/et_ctr_address"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_ctr_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_ctr_last_name"
        android:layout_alignLeft="@+id/et_ctr_last_name"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textMultiLine"
        android:minLines="3" />

    <EditText
        android:id="@+id/et_ctr_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_ctr_first_name"
        android:layout_alignLeft="@+id/et_ctr_first_name"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_ctr_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_ctr_goto_preferences"
        android:layout_alignRight="@+id/b_ctr_send_to_rep"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/b_ctr_goto_preferences"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="gotoToPreferences"
        android:text="@string/button_goto_preferences" />

    <TextView
        android:id="@+id/tv_ctrl_profile_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/b_ctr_goto_preferences"
        android:layout_alignBottom="@+id/b_ctr_goto_preferences"
        android:layout_alignLeft="@+id/et_ctr_first_name"
        android:text="@string/title_profile_info"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/i_ctr_green_check_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pb_ctr_working"
        android:layout_toLeftOf="@+id/tv_ctr_status"
        android:contentDescription="@string/image_green_check_mark"
        android:src="@drawable/green_check_mark"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/et_ctr_message_to_rep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_ctr_phone_number"
        android:layout_alignRight="@+id/et_ctr_phone_number"
        android:layout_alignTop="@+id/et_ctr_phone_number"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:hint="@string/custom_message"
        android:inputType="textMultiLine"
        android:minLines="3" />

</RelativeLayout>